Refactoring Provider